erDiagram
    %% USERS and REFRESH_TOKENS live in the auth_db schema (018_users_to_auth_db_schema.sql);
    %% every other table here is in public.
    BANK_ACCOUNT {
        varchar   account_number  PK
        bigint    client_id       FK,UK "NULL while unclaimed"
        decimal   account_balance
        varchar   bank_name
        varchar   ifsc_code
    }
    CLIENTS {
        bigint    client_id       PK
        varchar   name
        timestamp created_on
        varchar   account_state
        decimal   wallet_balance
    }
    WALLET_TRANSFERS {
        uuid      transfer_id     PK
        bigint    client_id       FK
        varchar   account_number  FK
        varchar   direction       "BANK_TO_WALLET | WALLET_TO_BANK"
        decimal   amount
        varchar   idempotency_key UK
        timestamp created_at
    }
    USERS {
        uuid      id              PK
        varchar   username        UK
        varchar   email           UK
        varchar   phone           "NULL until set via the Trade API's profile-update route"
        bigint    account_id      FK,UK "NULL until a bank account is linked"
        text      roles
        varchar   password_hash
        int       params_version
        int       version
        timestamp created_on
        timestamp updated
    }
    REFRESH_TOKENS {
        uuid      id              PK
        uuid      user_id         FK
        char      token_hash      UK
        timestamp expires_at
        timestamp revoked_at
        timestamp created_at
    }
    INSTRUMENTS {
        varchar   instrument_id   PK
        varchar   instrument_name UK
        boolean   active
        timestamp updated_on
    }
    ORDERS {
        bigint    order_id          PK
        bigint    client_id         FK
        bigint    account_id
        varchar   instrument_id     FK
        varchar   order_type
        varchar   side
        decimal   quantity
        decimal   price
        decimal   executed_price
        varchar   status
        varchar   idempotency_key   UK
        varchar   external_order_id
        timestamp created_at
        timestamp updated_at
    }
    ORDER_HISTORY {
        bigint    history_id        PK
        bigint    order_id          FK
        varchar   event_type
        varchar   previous_status
        varchar   new_status
        varchar   external_status
        varchar   external_order_id
        varchar   request_id
        varchar   failure_code
        varchar   failure_reason
        text      api_response
        timestamp event_timestamp
        timestamp created_at
    }
    PORTFOLIO_HOLDING {
        bigint    holding_id      PK
        bigint    client_id       FK
        varchar   instrument_id   FK
        int       quantity
        decimal   price_per_unit
        decimal   overall_gains
        timestamp created_at
        timestamp updated_at
    }
    PORTFOLIO_POSITIONS {
        bigint    position_id     PK
        bigint    client_id       FK
        varchar   instrument_id   FK
        int       quantity
        decimal   price_per_unit
        decimal   overall_gains
        timestamp created_at
        timestamp updated_at
    }

    CLIENTS              |o--o| BANK_ACCOUNT        : claims
    USERS                |o--o| CLIENTS             : trades
    USERS                ||--o{ REFRESH_TOKENS      : issues
    CLIENTS              ||--o{ WALLET_TRANSFERS    : moves
    BANK_ACCOUNT         ||--o{ WALLET_TRANSFERS    : funds
    CLIENTS              ||--o{ ORDERS              : places
    ORDERS               ||--o{ ORDER_HISTORY       : audited_by
    ORDERS               }o--|| INSTRUMENTS         : trades
    CLIENTS              ||--o{ PORTFOLIO_HOLDING   : owns
    CLIENTS              ||--o{ PORTFOLIO_POSITIONS : owns
    PORTFOLIO_HOLDING    }o--|| INSTRUMENTS         : held_as
    PORTFOLIO_POSITIONS  }o--|| INSTRUMENTS         : held_as
